--- a/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_TopHeaderPartial.cshtml
@@ -73,7 +73,7 @@
                             <span>@siteProperties.WebsiteContactPhone</span>
                         </li>
                     </ul>
-                    <span class="book-demo-2"><a href="get-started">Book A Demo</a></span>
+                    <span class="book-demo-2"><a href="@Url.Action("page", "Home", new { pageUrl = "get-started" })">Book A Demo</a></span>
                 </div>
             </div>
         </div>
