--- a/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
@@ -5,5 +5,5 @@
 @Html.Action("_SliderPartial")
 @Html.Action("_TopCategoryPartial")
 @Html.Action("_SpecialProductPartial")
-@Html.Partial("_SubscribePartial")
+@Html.Action("_SubscribePartial")
 @Html.Action("_BlogPartial")
