--- a/WMS/Views/Theme/Modern/TenantWebsites/_TenantWebSiteList.cshtml
+++ b/WMS/Views/Theme/Modern/TenantWebsites/_TenantWebSiteList.cshtml
@@ -61,7 +61,8 @@
              "<a href='" + Url.Action("Index", "WebsiteDiscountCodes", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-tags' title='Website Discount List'></i></a>" +
              "<a href='" + Url.Action("Index", "ProductAllowances", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list-ol' title='Product Allowance List'></i></a>" +
              "<a href='" + Url.Action("Index", "ProductAllowanceGroups", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-th-list' title='Product Allowance Group List'></i></a>" +
-             "<a href='" + Url.Action("WebsiteUISettings", "UISettings", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-paint-brush' title='Website UI Customization'></i></a>"
+             "<a href='" + Url.Action("WebsiteUISettings", "UISettings", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-paint-brush' title='Website UI Customization'></i></a>"+
+            "<a href='" + Url.Action("Index", "WebsiteDeliveryNavigations", new {siteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-truck-loading' title='Website Delivery Navigations'></i></a>"
 
 
  );
