--- a/WarehouseEcommerce/Views/Theme/University/Shared/_DeliveryInfoPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_DeliveryInfoPartial.cshtml
@@ -1,37 +1,22 @@
-﻿<section class="nb_sec nb_header_btm_beedsec">
-    <div class="nb_sec_navwrap">
-        <div class="container">
-            <ul class="nb_sec_navlist">
-                <li>
-                    <a href="">
-                        <i class="ico icon-tick"></i>
-                        <span class="txt">Easy Returns</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="ico icon-click" style="vertical-align: sub;"></i>
-                        <span class="txt">Click & Collect</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="ico icon-verified"></i>
-                        <span class="txt">100% Purchase Protection</span></a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="ico icon-delivery-truck"></i>
-                        <span class="txt">Next Day Delivery</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <i class="ico icon-star"></i>
-                        <span class="txt">Rate Excellent</span>
-                    </a>
-                </li>
-            </ul>
+﻿@model List<Ganedata.Core.Entities.Domain.WebsiteDeliveryNavigation>
+
+@if (Model.Count > 0)
+{
+    <section class="nb_sec nb_header_btm_beedsec">
+        <div class="nb_sec_navwrap">
+            <div class="container">
+                <ul class="nb_sec_navlist">
+                    @foreach (var item in Model)
+                    {
+                        <li>
+                            <a href="@item.Url">
+                                <i class="ico @item.IconName"></i>
+                                <span class="txt">@item.TextDescription</span>
+                            </a>
+                        </li>
+                    }
+                </ul>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+}
